# dataops

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  pyproject.toml
dataops_gym/: README.md  __init__.py  models.py  openenv.yaml  pyproject.toml
dataops_gym/baseline/: inference.py
dataops_gym/graders/: grader.py
dataops_gym/server/: app.py  dataops_environment.py  gradio_app.py  requirements.txt
dataops_gym/tasks/: auto_detect.py  generate_datasets.py  generators.py
dataops_gym/tasks/datasets/: easy_dirty.csv  easy_golden.csv  hard_dirty.json  hard_golden.json  medium_golden.csv  medium_purchases_dirty.csv  medium_users_dirty.csv
dataops_gym/tests/: test_environment.py
scripts/: validate-submission.sh
server/: app.py
