[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dataops-gym"
version = "2.0.0"
description = "A research-grade RL environment for training AI agents on data engineering tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "deepanjan1011"},
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "faker>=18.0.0",
    "requests>=2.28.0",
    "python-multipart>=0.0.5",
    "python-dotenv>=1.0.0",
    "gradio>=4.0.0",
    "matplotlib>=3.7.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
dataops-gym = "server.app:main"
server = "server.app:main"
start = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/deepanjan1011/dataops-gym"
Repository = "https://github.com/deepanjan1011/dataops"

[tool.setuptools.packages.find]
include = ["dataops_gym*"]
